# popapp

./: Cargo.toml  README.md  build-pop-enclave.sh  build-pop2-enclave.sh  deploy-pop2-enclave.sh  justfile  start-pop2-enclave.sh  tee.sh
.run/: Run live_test.run.xml
contracts/pop/: Cargo.toml  metadata.json
contracts/pop/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/pop/src/handlers/: execute.rs  instantiate.rs  migrate.rs  query.rs
contracts/pop/src/replies/: instantiate.rs
contracts/pop/tests/: integration.rs
contracts/pop2/: Cargo.toml
contracts/slinky/: Cargo.toml  metadata.json
contracts/slinky/src/: api.rs  contract.rs  error.rs  lib.rs  msg.rs
contracts/slinky/src/handlers/: execute.rs  instantiate.rs  query.rs
contracts/slinky/tests/: integration.rs
cycles-quartz/: Cargo.toml  go.js
cycles-quartz/crates/contracts/core/src/handler/execute/: attested.rs
cycles-quartz/crates/enclave/cw-proof/: Cargo.toml
cycles-quartz/crates/enclave/cw-proof/src/proof/: cw.rs
cycles-quartz/crates/enclave/cw-proof/src/verifier/: cw.rs
cycles-quartz/crates/utils/tm-prover/src/: prover.rs
cycles-quartz/examples/pop2-example/: quartz.toml
cycles-quartz/examples/pop2-example/contracts/: Cargo.toml
cycles-quartz/examples/pop2-example/contracts/src/: contract.rs  msg.rs  state.rs
cycles-quartz/examples/pop2-example/enclave/: Cargo.toml
cycles-quartz/examples/pop2-example/enclave/src/: state.rs  transfers_server.rs  wslistener.rs
cycles-quartz/examples/transfers/enclave/: Cargo.toml
cycles-quartz/examples/transfers/enclave/src/: transfers_server.rs  wslistener.rs
frontend/: .env.example  README.md  abstract.config.ts  codegen.yml  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/app/_components/: codegen-contract.tsx  create-abstract-account.tsx
frontend/app/_generated/generated-abstract/: index.ts
frontend/app/_generated/generated-abstract/cosmwasm-codegen/: Pop.client.ts  Pop.message-builder.ts  Pop.message-composer.ts  Pop.react-query.ts  Pop.types.ts
frontend/app/_generated/generated-graphql/: gql.ts  graphql.ts
frontend/app/_hooks/: useQueryAccountsById.ts
frontend/app/_providers/: graz.tsx
frontend/app/go/: page.tsx
frontend/utils/: chains.ts
scripts/webapp/: package.json
web/: package-lock.json  package.json
web/apps/webapp/: abstract.config.ts  codegen.yml  package.json
web/apps/webapp/src/app/: chart.tsx  layout.tsx  page.tsx
web/apps/webapp/src/app/_generated/generated-abstract/: index.ts
web/apps/webapp/src/app/_generated/generated-abstract/cosmwasm-codegen/: Pop.client.ts  Pop.message-builder.ts  Pop.message-composer.ts  Pop.react-query.ts  Pop.types.ts
web/apps/webapp/src/app/_generated/generated-graphql/: graphql.ts
web/apps/webapp/src/lib/: utils.ts
