[workspace]
members = ["contracts/*"]
resolver = "2"

exclude = ["cycles-quartz"]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false


[workspace.dependencies]
cosmwasm-std = { version = "2.1.1", features = [
    "stargate",
    "staking",
    "cosmwasm_1_1",
    "cosmwasm_1_2",
    "cosmwasm_1_3",
    "cosmwasm_1_4",
    "cosmwasm_2_0",
] }
#cosmwasm-std = { version = "2.1.4" }
cosmwasm-schema = { version = "2.1.1" }
cw-controllers = { version = "2.0.0" }
cw-storage-plus = "2.0.0"
thiserror = { version = "1.0.64" }
schemars = "0.8"
cw-asset = { version = "4.0.0" }

abstract-app = { version = "0.24.1-beta.2" }
abstract-adapter = { version = "0.24.1-beta.2" }
abstract-standalone = { version = "0.24.1-beta.2" }
abstract-interface = { version = "0.24.1-beta.2" }
abstract-client = { version = "0.24.1-beta.2" }
cw-orch = { version = "0.25.1" }
cw-orch-clone-testing = { version = "0.8.0" }

neutron-sdk = { git = "https://github.com/neutron-org/neutron-sdk", branch = "main" }
neutron-std = { git = "https://github.com/neutron-org/neutron-std", branch = "feat/respect-gogoproto-nullable" }

lazy_static = "1.4.0"
const_format = "0.2.33"
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
clap = { version = "4.5.19" }

pop = { path = "contracts/pop" }
slinky = { path = "contracts/slinky" }

