[package]
name = "pop"
version = "0.1.1"
authors = ["u <you@example.com>"]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[package.metadata.workspaces]
independent = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
required-features = ["schema"]

[[bin]]
name = "publish"
required-features = ["daemon-bin"]

[[bin]]
name = "live_test"
required-features = ["daemon-bin"]

[[bin]]
name = "clone_test"
required-features = ["daemon-bin"]

[features]
default = ["export"]
export = []
daemon-bin = [
  "cw-orch/daemon",
  "cw-orch-clone-testing",
  "dep:clap",
  "dep:abstract-client",
  "dep:dotenv",
  "dep:env_logger",
]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
cw-asset = { workspace = true }
abstract-app = { workspace = true, features = ["stargate"] }
const_format = { workspace = true }

# Dependencies for interface
cw-orch = { workspace = true }
cw-orch-clone-testing = { workspace = true, optional = true }
abstract-interface = { workspace = true }

# Dependencies for bins
clap = { workspace = true, optional = true, features = ["derive"] }
abstract-client = { workspace = true, optional = true }
dotenv = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }

# My dependencies
#neutron-sdk = { workspace = true }
neutron-std = { workspace = true }

sylvia = "1.2.1"
serde = "1.0.208"
#cosmwasm-std = "2.1.3"
prost = "0.12.4"
prost-types = "0.13.3"
cosmos-sdk-proto = { version = "0.20.0", default-features = false }

cw2 = "2.0.0"
serde-json-wasm = "1.0.0"
base64 = "0.21.4"
test-case = "3.3.1"
slinky = { workspace = true, default-features = false }

[dev-dependencies]
pop = { workspace = true }
abstract-client = { workspace = true }
abstract-app = { workspace = true, features = ["test-utils"] }
